--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "clear": "rimraf dist"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
