--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^4.23.2",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,7 +31,9 @@
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime-corejs3": "^7.19.1",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-loader": "^8.2.5",
+    "babel-plugin-import": "^1.13.5",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
