--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
