--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "clear": "rimraf dist"
   },
   "dependencies": {
+    "@lexical/react": "^0.6.0",
     "@reduxjs/toolkit": "^1.8.5",
     "antd": "^4.23.2",
     "axios": "^0.27.2",
     "gl-matrix": "^3.4.3",
+    "lexical": "^0.6.0",
+    "lodash-es": "^4.17.21",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loadable": "^5.5.0",
