--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "antd": "^4.23.2",
     "axios": "^0.27.2",
+    "dplayer": "^1.27.0",
     "gl-matrix": "^3.4.3",
     "lexical": "^0.6.0",
     "lodash-es": "^4.17.21",
