--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.2"
+    "webpackbar": "^5.0.2",
+    "worker-loader": "^3.0.8"
   }
 }
