--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^0.27.2",
     "dplayer": "^1.27.0",
     "gl-matrix": "^3.4.3",
+    "html-react-parser": "^3.0.9",
+    "idb-util": "^1.0.1",
     "lexical": "^0.6.0",
     "lodash-es": "^4.17.21",
     "prettier": "^2.7.1",
