--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,13 @@ jobs:
         # 命名这个任务为发布Deploy
       - name: Deploy
         # 因为构建之后，需要把代码上传到服务器上，所以需要连接到ssh，并且做一个拷贝操作
-        uses: cross-the-world/scp-pipeline@master
+        uses: appleboy/scp-action@master
         env:
           WELCOME: "ssh scp ssh pipelines"
           LASTSSH: "Doing something after copying"
         with:
           host: ${{ secrets.HOST }}
-          user: ${{ secrets.USER }}
-          pass: ${{ secrets.PWD }}
-          connect_timeout: 10s
-          first_ssh: |
-            rm -rf /usr/share/nginx/html/react18-router6/dist
-            mkdir -p /usr/share/nginx/html/react18-router6/dist
-          scp: |
-            './dist/**' => /usr/share/nginx/html/react18-router6/dist/
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.PWD }}
+          source: "./dist" # 拷贝文件目录
+          target: "/usr/share/nginx/html/react18-router6/"
